<resources>
    <string name="app_name">AICP Tiles Live Wallpaper</string>
    <string name="short_name">AICP Tiles</string>
    <string name="straight">Straight</string>
    <string name="eight">8</string>
    <string name="rand">Random</string>
    <string name="animSpeed">Animation Speed</string>
    <string name="motion">Motion</string>
    <string name="sensors">Sensor movements</string>
    <string name="about">About</string>
    <string name="original_app">Tiles Live Wallpaper</string>
    <string name="original_app_summary">Originally written by Paul Himmler, modified by AICP</string>
    <string name="original_app_link" translatable="false">https://play.google.com/store/apps/details?id=pit.opengles</string>
    <string name="license">License</string>
    <string name="license_summary">BSD-3-License</string>
    <string name="license_link" translatable="false">https://raw.githubusercontent.com/Paul-Hi/Tiles/3c9173d0bfc3cc27eefc1f0a6562e3c6c0b09a5e/LICENSE</string>
</resources>
